@@ -20,7 +20,6 @@
 package org.apache.ranger.rest;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -35,44 +34,68 @@ import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Context;
+import javax.ws.rs.core.MediaType;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.collections.MapUtils;
-import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.ranger.admin.client.datatype.RESTResponse;
+import org.apache.ranger.authorization.hadoop.config.RangerConfiguration;
+import org.apache.ranger.biz.AssetMgr;
+import org.apache.ranger.biz.RangerBizUtil;
+import org.apache.ranger.biz.ServiceDBStore;
+import org.apache.ranger.biz.ServiceMgr;
+import org.apache.ranger.biz.TagDBStore;
+import org.apache.ranger.biz.XUserMgr;
+import org.apache.ranger.common.GUIDUtil;
+import org.apache.ranger.common.MessageEnums;
+import org.apache.ranger.common.RESTErrorUtil;
+import org.apache.ranger.common.RangerSearchUtil;
+import org.apache.ranger.common.RangerValidatorFactory;
+import org.apache.ranger.common.ServiceUtil;
+import org.apache.ranger.db.RangerDaoManager;
+import org.apache.ranger.entity.XXPolicyExportAudit;
+import org.apache.ranger.entity.XXService;
+import org.apache.ranger.entity.XXServiceDef;
 import org.apache.ranger.plugin.model.RangerPolicy;
 import org.apache.ranger.plugin.model.RangerPolicy.RangerPolicyItem;
 import org.apache.ranger.plugin.model.RangerPolicy.RangerPolicyItemAccess;
 import org.apache.ranger.plugin.model.RangerPolicy.RangerPolicyResource;
 import org.apache.ranger.plugin.model.RangerService;
 import org.apache.ranger.plugin.model.RangerServiceDef;
-import org.apache.ranger.plugin.policyengine.RangerPolicyEngine;
-import org.apache.ranger.plugin.policyengine.RangerResource;
-import org.apache.ranger.plugin.policyengine.RangerResourceImpl;
-import org.apache.ranger.plugin.policyevaluator.RangerDefaultPolicyEvaluator;
+import org.apache.ranger.plugin.model.validation.RangerPolicyValidator;
+import org.apache.ranger.plugin.model.validation.RangerServiceDefValidator;
+import org.apache.ranger.plugin.model.validation.RangerServiceValidator;
+import org.apache.ranger.plugin.model.validation.RangerValidator.Action;
+import org.apache.ranger.plugin.policyengine.*;
 import org.apache.ranger.plugin.policyevaluator.RangerPolicyEvaluator;
 import org.apache.ranger.plugin.service.ResourceLookupContext;
+import org.apache.ranger.plugin.store.PList;
+import org.apache.ranger.plugin.store.EmbeddedServiceDefsUtil;
 import org.apache.ranger.plugin.util.GrantRevokeRequest;
+import org.apache.ranger.plugin.util.RangerPerfTracer;
 import org.apache.ranger.plugin.util.SearchFilter;
 import org.apache.ranger.plugin.util.ServicePolicies;
+import org.apache.ranger.security.context.RangerAPIList;
+import org.apache.ranger.service.RangerPolicyService;
+import org.apache.ranger.service.RangerServiceDefService;
+import org.apache.ranger.service.RangerServiceService;
+import org.apache.ranger.view.RangerPolicyList;
+import org.apache.ranger.view.RangerServiceDefList;
+import org.apache.ranger.view.RangerServiceList;
 import org.apache.ranger.view.VXResponse;
+import org.apache.ranger.view.VXString;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Scope;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-import org.apache.ranger.admin.client.datatype.RESTResponse;
-import org.apache.ranger.biz.AssetMgr;
-import org.apache.ranger.biz.ServiceMgr;
-import org.apache.ranger.biz.ServiceDBStore;
-import org.apache.ranger.common.RESTErrorUtil;
-import org.apache.ranger.entity.XXPolicyExportAudit;
-
 
 @Path("plugins")
 @Component
@@ -80,6 +103,7 @@ import org.apache.ranger.entity.XXPolicyExportAudit;
 @Transactional(propagation = Propagation.REQUIRES_NEW)
 public class ServiceREST {
 	private static final Log LOG = LogFactory.getLog(ServiceREST.class);
+	private static final Log PERF_LOG = RangerPerfTracer.getPerfLogger("rest.ServiceREST");
 
 	@Autowired
 	RESTErrorUtil restErrorUtil;
@@ -91,27 +115,75 @@ public class ServiceREST {
 	AssetMgr assetMgr;
 
 	@Autowired
+	XUserMgr userMgr;
+
+	@Autowired
 	ServiceDBStore svcStore;
+	
+	@Autowired
+	ServiceUtil serviceUtil;
+
+	@Autowired
+	RangerPolicyService policyService;
+	
+	@Autowired
+	RangerServiceService svcService;
+	
+	@Autowired
+	RangerServiceDefService serviceDefService;
+	
+	@Autowired
+	RangerSearchUtil searchUtil;
+	
+    @Autowired
+    RangerBizUtil bizUtil;
+
+	@Autowired
+	GUIDUtil guidUtil;
+	
+	@Autowired
+	RangerValidatorFactory validatorFactory; 
+
+	@Autowired
+	RangerDaoManager daoManager;
+
+	@Autowired
+	TagDBStore tagStore;
 
 	public ServiceREST() {
 	}
 
-
 	@POST
 	@Path("/definitions")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.CREATE_SERVICE_DEF + "\")")
 	public RangerServiceDef createServiceDef(RangerServiceDef serviceDef) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.createServiceDef(" + serviceDef + ")");
 		}
 
-		RangerServiceDef ret = null;
+		RangerServiceDef ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.createServiceDef(serviceDefName=" + serviceDef.getName() + ")");
+			}
+			RangerServiceDefValidator validator = validatorFactory.getServiceDefValidator(svcStore);
+			validator.validate(serviceDef, Action.CREATE);
+
+			bizUtil.hasAdminPermissions("Service-Def");
+			bizUtil.hasKMSPermissions("Service-Def", serviceDef.getImplClass());
+
 			ret = svcStore.createServiceDef(serviceDef);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("createServiceDef(" + serviceDef + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -124,18 +196,34 @@ public class ServiceREST {
 	@PUT
 	@Path("/definitions/{id}")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.UPDATE_SERVICE_DEF + "\")")
 	public RangerServiceDef updateServiceDef(RangerServiceDef serviceDef) {
 		if(LOG.isDebugEnabled()) {
-			LOG.debug("==> ServiceREST.updateServiceDef(" + serviceDef + ")");
+			LOG.debug("==> ServiceREST.updateServiceDef(serviceDefName=" + serviceDef.getName() + ")");
 		}
 
-		RangerServiceDef ret = null;
+		RangerServiceDef ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.updateServiceDef(" + serviceDef.getName() + ")");
+			}
+			RangerServiceDefValidator validator = validatorFactory.getServiceDefValidator(svcStore);
+			validator.validate(serviceDef, Action.UPDATE);
+
+			bizUtil.hasAdminPermissions("Service-Def");
+			bizUtil.hasKMSPermissions("Service-Def", serviceDef.getImplClass());
+
 			ret = svcStore.updateServiceDef(serviceDef);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("updateServiceDef(" + serviceDef + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -148,16 +236,40 @@ public class ServiceREST {
 	@DELETE
 	@Path("/definitions/{id}")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
-	public void deleteServiceDef(@PathParam("id") Long id) {
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.DELETE_SERVICE_DEF + "\")")
+	public void deleteServiceDef(@PathParam("id") Long id, @Context HttpServletRequest request) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.deleteServiceDef(" + id + ")");
 		}
 
+		RangerPerfTracer perf = null;
+
 		try {
-			svcStore.deleteServiceDef(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.deleteServiceDef(serviceDefId=" + id + ")");
+			}
+			RangerServiceDefValidator validator = validatorFactory.getServiceDefValidator(svcStore);
+			validator.validate(id, Action.DELETE);
+
+			bizUtil.hasAdminPermissions("Service-Def");
+			XXServiceDef xServiceDef = daoManager.getXXServiceDef().getById(id);
+			bizUtil.hasKMSPermissions("Service-Def", xServiceDef.getImplclassname());
+
+			String forceDeleteStr = request.getParameter("forceDelete");
+			boolean forceDelete = false;
+			if(!StringUtils.isEmpty(forceDeleteStr) && forceDeleteStr.equalsIgnoreCase("true")) {
+				forceDelete = true;
+			}
+			
+			svcStore.deleteServiceDef(id, forceDelete);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("deleteServiceDef(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -168,17 +280,35 @@ public class ServiceREST {
 	@GET
 	@Path("/definitions/{id}")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICE_DEF + "\")")
 	public RangerServiceDef getServiceDef(@PathParam("id") Long id) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServiceDef(" + id + ")");
 		}
 
-		RangerServiceDef ret = null;
+		RangerServiceDef ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServiceDef(serviceDefId=" + id + ")");
+			}
+			XXServiceDef xServiceDef = daoManager.getXXServiceDef().getById(id);
+			if (!bizUtil.hasAccess(xServiceDef, null)) {
+				throw restErrorUtil.createRESTException(
+						"User is not allowed to access service-def, id: " + xServiceDef.getId(),
+						MessageEnums.OPER_NO_PERMISSION);
+			}
+
 			ret = svcStore.getServiceDef(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getServiceDef(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(ret == null) {
@@ -195,17 +325,37 @@ public class ServiceREST {
 	@GET
 	@Path("/definitions/name/{name}")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICE_DEF_BY_NAME + "\")")
 	public RangerServiceDef getServiceDefByName(@PathParam("name") String name) {
 		if(LOG.isDebugEnabled()) {
-			LOG.debug("==> ServiceREST.getServiceDefByName(" + name + ")");
+			LOG.debug("==> ServiceREST.getServiceDefByName(serviceDefName=" + name + ")");
 		}
 
-		RangerServiceDef ret = null;
+		RangerServiceDef ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServiceDefByName(" + name + ")");
+			}
+			XXServiceDef xServiceDef = daoManager.getXXServiceDef().findByName(name);
+			if (xServiceDef != null) {
+				if (!bizUtil.hasAccess(xServiceDef, null)) {
+					throw restErrorUtil.createRESTException(
+							"User is not allowed to access service-def: " + xServiceDef.getName(),
+							MessageEnums.OPER_NO_PERMISSION);
+				}
+			}
+
 			ret = svcStore.getServiceDefByName(name);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getServiceDefByName(" + name + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(ret == null) {
@@ -218,48 +368,92 @@ public class ServiceREST {
 
 		return ret;
 	}
-
+	
 	@GET
 	@Path("/definitions")
 	@Produces({ "application/json", "application/xml" })
-	public List<RangerServiceDef> getServiceDefs(@Context HttpServletRequest request) {
-		if(LOG.isDebugEnabled()) {
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICE_DEFS + "\")")
+	public RangerServiceDefList getServiceDefs(@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServiceDefs()");
 		}
 
-		List<RangerServiceDef> ret = null;
+		RangerServiceDefList ret  = null;
+		RangerPerfTracer     perf = null;
 
-		SearchFilter filter = getSearchFilter(request);
+		PList<RangerServiceDef> paginatedSvcDefs = null;
+
+		SearchFilter filter = searchUtil.getSearchFilter(request, serviceDefService.sortFields);
 
 		try {
-			ret = svcStore.getServiceDefs(filter);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServiceDefs()");
+			}
+			paginatedSvcDefs = svcStore.getPaginatedServiceDefs(filter);
+
+			if(paginatedSvcDefs != null) {
+				ret = new RangerServiceDefList();
+
+				ret.setServiceDefs(paginatedSvcDefs.getList());
+				ret.setPageSize(paginatedSvcDefs.getPageSize());
+				ret.setResultSize(paginatedSvcDefs.getResultSize());
+				ret.setStartIndex(paginatedSvcDefs.getStartIndex());
+				ret.setTotalCount(paginatedSvcDefs.getTotalCount());
+				ret.setSortBy(paginatedSvcDefs.getSortBy());
+				ret.setSortType(paginatedSvcDefs.getSortType());
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch (Throwable excp) {
+			LOG.error("getServiceDefs() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.getServiceDefs(): count=" + (ret == null ? 0 : ret.size()));
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getServiceDefs(): count=" + (ret == null ? 0 : ret.getListSize()));
 		}
-
 		return ret;
 	}
-
 
 	@POST
 	@Path("/services")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.CREATE_SERVICE + "\")")
 	public RangerService createService(RangerService service) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.createService(" + service + ")");
 		}
 
-		RangerService ret = null;
+		RangerService    ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.createService(serviceName=" + service.getName() + ")");
+			}
+			RangerServiceValidator validator = validatorFactory.getServiceValidator(svcStore);
+			validator.validate(service, Action.CREATE);
+
+			bizUtil.hasAdminPermissions("Services");
+
+			// TODO: As of now we are allowing SYS_ADMIN to create all the
+			// services including KMS
+
+			XXServiceDef xxServiceDef = daoManager.getXXServiceDef().findByName(service.getType());
+			bizUtil.hasKMSPermissions("Service", xxServiceDef.getImplclassname());
+
 			ret = svcStore.createService(service);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("createService(" + service + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -272,18 +466,39 @@ public class ServiceREST {
 	@PUT
 	@Path("/services/{id}")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.UPDATE_SERVICE + "\")")
 	public RangerService updateService(RangerService service) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.updateService(): " + service);
 		}
 
-		RangerService ret = null;
+		RangerService    ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.updateService(serviceName=" + service.getName() + ")");
+			}
+			RangerServiceValidator validator = validatorFactory.getServiceValidator(svcStore);
+			validator.validate(service, Action.UPDATE);
+
+			bizUtil.hasAdminPermissions("Services");
+
+			// TODO: As of now we are allowing SYS_ADMIN to create all the
+			// services including KMS
+
+			XXServiceDef xxServiceDef = daoManager.getXXServiceDef().findByName(service.getType());
+			bizUtil.hasKMSPermissions("Service", xxServiceDef.getImplclassname());
+
 			ret = svcStore.updateService(service);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("updateService(" + service + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -296,16 +511,41 @@ public class ServiceREST {
 	@DELETE
 	@Path("/services/{id}")
 	@Produces({ "application/json", "application/xml" })
-	@PreAuthorize("hasRole('ROLE_SYS_ADMIN')")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.DELETE_SERVICE + "\")")
 	public void deleteService(@PathParam("id") Long id) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.deleteService(" + id + ")");
 		}
 
+		RangerPerfTracer perf = null;
+
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.deleteService(serviceId=" + id + ")");
+			}
+			RangerServiceValidator validator = validatorFactory.getServiceValidator(svcStore);
+			validator.validate(id, Action.DELETE);
+
+			bizUtil.hasAdminPermissions("Services");
+
+			// TODO: As of now we are allowing SYS_ADMIN to create all the
+			// services including KMS
+
+			XXService service = daoManager.getXXService().getById(id);
+			XXServiceDef xxServiceDef = daoManager.getXXServiceDef().getById(service.getType());
+			bizUtil.hasKMSPermissions("Service", xxServiceDef.getImplclassname());
+
+			tagStore.deleteAllTagObjectsForService(service.getName(), false);
+
 			svcStore.deleteService(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("deleteService(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -316,17 +556,28 @@ public class ServiceREST {
 	@GET
 	@Path("/services/{id}")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICE + "\")")
 	public RangerService getService(@PathParam("id") Long id) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getService(" + id + ")");
 		}
 
-		RangerService ret = null;
+		RangerService    ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getService(serviceId=" + id + ")");
+			}
 			ret = svcStore.getService(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getService(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(ret == null) {
@@ -343,17 +594,28 @@ public class ServiceREST {
 	@GET
 	@Path("/services/name/{name}")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICE_BY_NAME + "\")")
 	public RangerService getServiceByName(@PathParam("name") String name) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServiceByName(" + name + ")");
 		}
 
-		RangerService ret = null;
+		RangerService    ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getService(serviceName=" + name + ")");
+			}
 			ret = svcStore.getServiceByName(name);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getServiceByName(" + name + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(ret == null) {
@@ -370,19 +632,73 @@ public class ServiceREST {
 	@GET
 	@Path("/services")
 	@Produces({ "application/json", "application/xml" })
-	public List<RangerService> getServices(@Context HttpServletRequest request) {
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_SERVICES + "\")")
+	public RangerServiceList getServices(@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("==> ServiceREST.getServices()");
+		}
+
+		RangerServiceList ret  = null;
+		RangerPerfTracer  perf = null;
+
+		PList<RangerService> paginatedSvcs = null;
+
+		SearchFilter filter = searchUtil.getSearchFilter(request, svcService.sortFields);
+
+		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServices()");
+			}
+			paginatedSvcs = svcStore.getPaginatedServices(filter);
+
+			if(paginatedSvcs != null) {
+				ret = new RangerServiceList();
+
+				ret.setServices(paginatedSvcs.getList());
+				ret.setPageSize(paginatedSvcs.getPageSize());
+				ret.setResultSize(paginatedSvcs.getResultSize());
+				ret.setStartIndex(paginatedSvcs.getStartIndex());
+				ret.setTotalCount(paginatedSvcs.getTotalCount());
+				ret.setSortBy(paginatedSvcs.getSortBy());
+				ret.setSortType(paginatedSvcs.getSortType());
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch (Throwable excp) {
+			LOG.error("getServices() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
+		}
+
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getServices(): count=" + (ret == null ? 0 : ret.getListSize()));
+		}
+		return ret;
+	}
+
+	public List<RangerService> getServices(SearchFilter filter) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServices():");
 		}
 
-		List<RangerService> ret = null;
-
-		SearchFilter filter = getSearchFilter(request);
+		List<RangerService> ret  = null;
+		RangerPerfTracer    perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServices()");
+			}
 			ret = svcStore.getServices(filter);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getServices() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -392,22 +708,34 @@ public class ServiceREST {
 		return ret;
 	}
 
+
 	@GET
 	@Path("/services/count")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.COUNT_SERVICES + "\")")
 	public Long countServices(@Context HttpServletRequest request) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.countServices():");
 		}
 
-		Long ret = null;
+		Long             ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
-			List<RangerService> services = getServices(request);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.countService()");
+			}
+			List<RangerService> services = getServices(request).getServices();
 			
-			ret = new Long(services == null ? 0 : services.size());
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			ret = Long.valueOf(services == null ? 0 : services.size());
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("countServices() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -420,17 +748,28 @@ public class ServiceREST {
 	@POST
 	@Path("/services/validateConfig")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.VALIDATE_CONFIG + "\")")
 	public VXResponse validateConfig(RangerService service) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.validateConfig(" + service + ")");
 		}
 
-		VXResponse ret = new VXResponse();
+		VXResponse       ret  = new VXResponse();
+		RangerPerfTracer perf = null;
 
 		try {
-			ret = serviceMgr.validateConfig(service);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			if (RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.validateConfig(serviceName=" + service.getName() + ")");
+			}
+			ret = serviceMgr.validateConfig(service, svcStore);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("validateConfig(" + service + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -443,19 +782,28 @@ public class ServiceREST {
 	@POST
 	@Path("/services/lookupResource/{serviceName}")
 	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.LOOKUP_RESOURCE + "\")")
 	public List<String> lookupResource(@PathParam("serviceName") String serviceName, ResourceLookupContext context) {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.lookupResource(" + serviceName + ")");
 		}
 
-		List<String> ret = new ArrayList<String>();
+		List<String>     ret  = new ArrayList<String>();
+		RangerPerfTracer perf = null;
 
 		try {
-			ret = serviceMgr.lookupResource(serviceName,context);
-		} catch(Exception excp) {
-			LOG.error("lookupResource() failed", excp);
+			if (RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.lookupResource(serviceName=" + serviceName + ")");
+			}
+			ret = serviceMgr.lookupResource(serviceName, context, svcStore);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("lookupResource(" + serviceName + ", " + context + ") failed", excp);
 
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -473,165 +821,85 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.grantAccess(" + serviceName + ", " + grantRequest + ")");
 		}
 
-		RESTResponse ret = new RESTResponse();
+		RESTResponse     ret  = new RESTResponse();
+		RangerPerfTracer perf = null;
 
-		try {
-			String         userName   = grantRequest.getGrantor();
-			Set<String>    userGroups = Collections.<String>emptySet(); // TODO: get groups for the grantor from Ranger database
-			RangerResource resource   = new RangerResourceImpl(grantRequest.getResource());
+		if (serviceUtil.isValidateHttpsAuthentication(serviceName, request)) {
 
-			boolean isAdmin = isAdminForResource(userName, userGroups, serviceName, resource);
-
-			if(!isAdmin) {
-				throw restErrorUtil.createRESTException(HttpServletResponse.SC_UNAUTHORIZED, "", true);
-			}
-
-			RangerPolicy policy = getExactMatchPolicyForResource(serviceName, resource);
-	
-			if(policy != null) {
-				boolean policyUpdated = false;
-
-				// replace all existing privileges for users and groups
-				if(grantRequest.getReplaceExistingPermissions()) {
-					List<RangerPolicyItem> policyItems = policy.getPolicyItems();
-
-					int numOfItems = policyItems.size();
-	
-					for(int i = 0; i < numOfItems; i++) {
-						RangerPolicyItem policyItem = policyItems.get(i);
-	
-						if(CollectionUtils.containsAny(policyItem.getUsers(), grantRequest.getUsers())) {
-							policyItem.getUsers().removeAll(grantRequest.getUsers());
-
-							policyUpdated = true;
-						}
-
-						if(CollectionUtils.containsAny(policyItem.getGroups(), grantRequest.getGroups())) {
-							policyItem.getGroups().removeAll(grantRequest.getGroups());
-
-							policyUpdated = true;
-						}
-
-						if(CollectionUtils.isEmpty(policyItem.getUsers()) && CollectionUtils.isEmpty(policyItem.getGroups())) {
-							policyItems.remove(i);
-							numOfItems--;
-							i--;
-
-							policyUpdated = true;
-						}
-					}
-
-					if(compactPolicy(policy)) {
-						policyUpdated = true;
-					}
+			try {
+				if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+					perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.grantAccess(serviceName=" + serviceName + ")");
 				}
 
-				for(String user : grantRequest.getUsers()) {
-					RangerPolicyItem policyItem = getPolicyItemForUser(policy, user);
-					
-					if(policyItem != null) {
-						if(addAccesses(policyItem, grantRequest.getAccessTypes())) {
-							policyUpdated = true;
-						}
+				String               userName   = grantRequest.getGrantor();
+				Set<String>          userGroups = userMgr.getGroupsForUser(userName);
+				RangerAccessResource resource   = new RangerAccessResourceImpl(grantRequest.getResource());
+
+				boolean isAdmin = hasAdminAccess(serviceName, userName, userGroups, resource);
+	
+				if(!isAdmin) {
+					throw restErrorUtil.createRESTException(HttpServletResponse.SC_UNAUTHORIZED, "", true);
+				}
+	
+				RangerPolicy policy = getExactMatchPolicyForResource(serviceName, resource);
+
+				if(policy != null) {
+					boolean policyUpdated = false;
+					policyUpdated = ServiceRESTUtil.processGrantRequest(policy, grantRequest);
+
+					if(policyUpdated) {
+						svcStore.updatePolicy(policy);
 					} else {
-						policyItem = new RangerPolicyItem();
-						
-						policyItem.getUsers().add(user);
-						addAccesses(policyItem, grantRequest.getAccessTypes());
-						policy.getPolicyItems().add(policyItem);
-
-						policyUpdated = true;
+						LOG.error("processGrantRequest processing failed");
+						throw new Exception("processGrantRequest processing failed");
 					}
-
-					if(grantRequest.getDelegateAdmin()) {
-						if(!policyItem.getDelegateAdmin()) {
-							policyItem.setDelegateAdmin(Boolean.TRUE);
-	
-							policyUpdated = true;
-						}
-					}
-				}
-
-				for(String group : grantRequest.getGroups()) {
-					RangerPolicyItem policyItem = getPolicyItemForGroup(policy, group);
-					
-					if(policyItem != null) {
-						if(addAccesses(policyItem, grantRequest.getAccessTypes())) {
-							policyUpdated = true;
-						}
-					} else {
-						policyItem = new RangerPolicyItem();
-						
-						policyItem.getGroups().add(group);
-						addAccesses(policyItem, grantRequest.getAccessTypes());
-						policy.getPolicyItems().add(policyItem);
-
-						policyUpdated = true;
-					}
-
-					if(grantRequest.getDelegateAdmin()) {
-						if(!policyItem.getDelegateAdmin()) {
-							policyItem.setDelegateAdmin(Boolean.TRUE);
-	
-							policyUpdated = true;
-						}
-					}
-				}
-
-				if(policyUpdated) {
-					updatePolicy(policy);
-				}
-			} else {
-				policy = new RangerPolicy();
-				policy.setService(serviceName);
-				policy.setName("grant-" + System.currentTimeMillis()); // TODO: better policy name
-				policy.setDescription("created by grant");
-				policy.setIsAuditEnabled(grantRequest.getEnableAudit());
-				policy.setCreatedBy(userName);
-	
-				Map<String, RangerPolicyResource> policyResources = new HashMap<String, RangerPolicyResource>();
-				Set<String>                       resourceNames   = resource.getKeys();
-	
-				if(! CollectionUtils.isEmpty(resourceNames)) {
-					for(String resourceName : resourceNames) {
-						policyResources.put(resourceName, new RangerPolicyResource(resource.getValue(resourceName)));
-					}
-				}
-				policy.setResources(policyResources);
-	
-				for(String user : grantRequest.getUsers()) {
-					RangerPolicyItem policyItem = new RangerPolicyItem();
+				} else {
+					policy = new RangerPolicy();
+					policy.setService(serviceName);
+					policy.setName("grant-" + System.currentTimeMillis()); // TODO: better policy name
+					policy.setDescription("created by grant");
+					policy.setIsAuditEnabled(grantRequest.getEnableAudit());
+					policy.setCreatedBy(userName);
 		
-					policyItem.getUsers().add(user);
+					Map<String, RangerPolicyResource> policyResources = new HashMap<String, RangerPolicyResource>();
+					Set<String>                       resourceNames   = resource.getKeys();
+		
+					if(! CollectionUtils.isEmpty(resourceNames)) {
+						for(String resourceName : resourceNames) {
+							RangerPolicyResource policyResource = new RangerPolicyResource(resource.getValue(resourceName));
+							policyResource.setIsRecursive(grantRequest.getIsRecursive());
+	
+							policyResources.put(resourceName, policyResource);
+						}
+					}
+					policy.setResources(policyResources);
+
+					RangerPolicyItem policyItem = new RangerPolicyItem();
+
+					policyItem.setDelegateAdmin(grantRequest.getDelegateAdmin());
+					policyItem.getUsers().addAll(grantRequest.getUsers());
+					policyItem.getGroups().addAll(grantRequest.getGroups());
+
 					for(String accessType : grantRequest.getAccessTypes()) {
 						policyItem.getAccesses().add(new RangerPolicyItemAccess(accessType, Boolean.TRUE));
 					}
-					policyItem.setDelegateAdmin(grantRequest.getDelegateAdmin());
-					policy.getPolicyItems().add(policyItem);
-				}
-				
-				for(String group : grantRequest.getGroups()) {
-					RangerPolicyItem policyItem = new RangerPolicyItem();
-		
-					policyItem.getGroups().add(group);
-					for(String accessType : grantRequest.getAccessTypes()) {
-						policyItem.getAccesses().add(new RangerPolicyItemAccess(accessType, Boolean.TRUE));
-					}
-					policyItem.setDelegateAdmin(grantRequest.getDelegateAdmin());
-					policy.getPolicyItems().add(policyItem);
-				}
-	
-				createPolicy(policy);
-			}
-		} catch(WebApplicationException excp) {
-			throw excp;
-		} catch(Exception excp) {
-			LOG.error("grantAccess() failed", excp);
 
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+					policy.getPolicyItems().add(policyItem);
+
+					svcStore.createPolicy(policy);
+				}
+			} catch(WebApplicationException excp) {
+				throw excp;
+			} catch(Throwable excp) {
+				LOG.error("grantAccess(" + serviceName + ", " + grantRequest + ") failed", excp);
+	
+				throw restErrorUtil.createRESTException(excp.getMessage());
+			} finally {
+				RangerPerfTracer.log(perf);
+			}
+	
+			ret.setStatusCode(RESTResponse.STATUS_SUCCESS);
 		}
-
-		ret.setStatusCode(RESTResponse.STATUS_SUCCESS);
 
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("<== ServiceREST.grantAccess(" + serviceName + ", " + grantRequest + "): " + ret);
@@ -648,77 +916,53 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.revokeAccess(" + serviceName + ", " + revokeRequest + ")");
 		}
 
-		RESTResponse ret = new RESTResponse();
+		RESTResponse     ret  = new RESTResponse();
+		RangerPerfTracer perf = null;
 
-		try {
-			String         userName   = revokeRequest.getGrantor();
-			Set<String>    userGroups = Collections.<String>emptySet(); // TODO: get groups for the grantor from Ranger databas
-			RangerResource resource   = new RangerResourceImpl(revokeRequest.getResource());
+		if (serviceUtil.isValidateHttpsAuthentication(serviceName,request)) {
 
-			boolean isAdmin = isAdminForResource(userName, userGroups, serviceName, resource);
-			
-			if(!isAdmin) {
-				throw restErrorUtil.createRESTException(HttpServletResponse.SC_UNAUTHORIZED, "", true);
+			try {
+				if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+					perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.revokeAccess(serviceName=" + serviceName + ")");
+				}
+
+				String               userName   = revokeRequest.getGrantor();
+				Set<String>          userGroups =  userMgr.getGroupsForUser(userName);
+				RangerAccessResource resource   = new RangerAccessResourceImpl(revokeRequest.getResource());
+
+				boolean isAdmin = hasAdminAccess(serviceName, userName, userGroups, resource);
+				
+				if(!isAdmin) {
+					throw restErrorUtil.createRESTException(HttpServletResponse.SC_UNAUTHORIZED, "", true);
+				}
+	
+				RangerPolicy policy = getExactMatchPolicyForResource(serviceName, resource);
+				
+				if(policy != null) {
+					boolean policyUpdated = false;
+					policyUpdated = ServiceRESTUtil.processRevokeRequest(policy, revokeRequest);
+
+					if(policyUpdated) {
+						svcStore.updatePolicy(policy);
+					} else {
+						LOG.error("processRevokeRequest processing failed");
+						throw new Exception("processRevokeRequest processing failed");
+					}
+				} else {
+					// nothing to revoke!
+				}
+			} catch(WebApplicationException excp) {
+				throw excp;
+			} catch(Throwable excp) {
+				LOG.error("revokeAccess(" + serviceName + ", " + revokeRequest + ") failed", excp);
+	
+				throw restErrorUtil.createRESTException(excp.getMessage());
+			} finally {
+				RangerPerfTracer.log(perf);
 			}
-
-			RangerPolicy policy = getExactMatchPolicyForResource(serviceName, resource);
-			
-			if(policy != null) {
-				boolean policyUpdated = false;
-
-				for(String user : revokeRequest.getUsers()) {
-					RangerPolicyItem policyItem = getPolicyItemForUser(policy, user);
-					
-					if(policyItem != null) {
-						if(removeAccesses(policyItem, revokeRequest.getAccessTypes())) {
-							policyUpdated = true;
-						}
-					}
-
-					if(revokeRequest.getDelegateAdmin()) { // remove delegate?
-						if(policyItem.getDelegateAdmin()) {
-							policyItem.setDelegateAdmin(Boolean.FALSE);
-							policyUpdated = true;
-						}
-					}
-				}
-
-				for(String group : revokeRequest.getGroups()) {
-					RangerPolicyItem policyItem = getPolicyItemForGroup(policy, group);
-					
-					if(policyItem != null) {
-						if(removeAccesses(policyItem, revokeRequest.getAccessTypes())) {
-							policyUpdated = true;
-						}
-
-						if(revokeRequest.getDelegateAdmin()) { // remove delegate?
-							if(policyItem.getDelegateAdmin()) {
-								policyItem.setDelegateAdmin(Boolean.FALSE);
-								policyUpdated = true;
-							}
-						}
-					}
-				}
-
-				if(compactPolicy(policy)) {
-					policyUpdated = true;
-				}
-
-				if(policyUpdated) {
-					updatePolicy(policy);
-				}
-			} else {
-				// nothing to revoke!
-			}
-		} catch(WebApplicationException excp) {
-			throw excp;
-		} catch(Exception excp) {
-			LOG.error("revokeAccess() failed", excp);
-
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+	
+			ret.setStatusCode(RESTResponse.STATUS_SUCCESS);
 		}
-
-		ret.setStatusCode(RESTResponse.STATUS_SUCCESS);
 
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("<== ServiceREST.revokeAccess(" + serviceName + ", " + revokeRequest + "): " + ret);
@@ -726,7 +970,6 @@ public class ServiceREST {
 
 		return ret;
 	}
-
 
 	@POST
 	@Path("/policies")
@@ -736,16 +979,96 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.createPolicy(" + policy + ")");
 		}
 
-		RangerPolicy ret = null;
+		RangerPolicy     ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.createPolicy(policyName=" + policy.getName() + ")");
+			}
+			// this needs to happen before validator is called
+			// set name of policy if unspecified
+			if (StringUtils.isBlank(policy.getName())) { // use of isBlank over isEmpty is deliberate as a blank string does not strike us as a particularly useful policy name!
+				String guid = policy.getGuid();
+				if (StringUtils.isBlank(guid)) { // use of isBlank is deliberate. External parties could send the guid in, perhaps to sync between dev/test/prod instances?
+					guid = guidUtil.genGUID();
+					policy.setGuid(guid);
+					if (LOG.isDebugEnabled()) {
+						LOG.debug("No GUID supplied on the policy!  Ok, setting GUID to [" + guid + "].");
+					}
+				}
+				String name = policy.getService() + "-" + guid;
+				policy.setName(name);
+				if (LOG.isDebugEnabled()) {
+					LOG.debug("Policy did not have its name set!  Ok, setting name to [" + name + "]");
+				}
+			}
+			RangerPolicyValidator validator = validatorFactory.getPolicyValidator(svcStore);
+			validator.validate(policy, Action.CREATE, bizUtil.isAdmin());
+
+			ensureAdminAccess(policy.getService(), policy.getResources());
+
 			ret = svcStore.createPolicy(policy);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("createPolicy(" + policy + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("<== ServiceREST.createPolicy(" + policy + "): " + ret);
+		}
+
+		return ret;
+	}
+
+	/*
+	The verb for applyPolicy is POST as it could be partial update or a create
+	*/
+
+	@POST
+	@Path("/policies/apply")
+	@Produces({ "application/json", "application/xml" })
+	public RangerPolicy applyPolicy(RangerPolicy policy) {
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("==> ServiceREST.applyPolicy(" + policy + ")");
+		}
+
+		RangerPolicy ret = null;
+
+		if (policy != null && StringUtils.isNotBlank(policy.getService())) {
+			try {
+				// Check if applied policy contains any conditions
+				if (ServiceRESTUtil.containsRangerCondition(policy)) {
+					LOG.error("Applied policy contains condition(s); not supported:" + policy);
+					throw new Exception("Applied policy contains condition(s); not supported:" + policy);
+				}
+
+				RangerPolicy existingPolicy = getExactMatchPolicyForResource(policy.getService(), policy.getResources());
+
+				if (existingPolicy == null) {
+					ret = createPolicy(policy);
+				} else {
+					ServiceRESTUtil.processApplyPolicy(existingPolicy, policy);
+
+					ret = updatePolicy(existingPolicy);
+				}
+			} catch(WebApplicationException excp) {
+				throw excp;
+			} catch (Exception exception) {
+				LOG.error("Failed to apply policy:", exception);
+				throw restErrorUtil.createRESTException(exception.getMessage());
+			}
+		} else {
+			throw restErrorUtil.createRESTException("Non-existing service specified:" + policy == null ? null : policy.getService());
+		}
+
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.applyPolicy(" + policy + ") : " + ret);
 		}
 
 		return ret;
@@ -759,12 +1082,27 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.updatePolicy(" + policy + ")");
 		}
 
-		RangerPolicy ret = null;
+		RangerPolicy ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.updatePolicy(policyId=" + policy.getId() + ")");
+			}
+			RangerPolicyValidator validator = validatorFactory.getPolicyValidator(svcStore);
+			validator.validate(policy, Action.UPDATE, bizUtil.isAdmin());
+
+			ensureAdminAccess(policy.getService(), policy.getResources());
+
 			ret = svcStore.updatePolicy(policy);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("updatePolicy(" + policy + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -782,10 +1120,28 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.deletePolicy(" + id + ")");
 		}
 
+		RangerPerfTracer perf = null;
+
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.deletePolicy(policyId=" + id + ")");
+			}
+			RangerPolicyValidator validator = validatorFactory.getPolicyValidator(svcStore);
+			validator.validate(id, Action.DELETE);
+
+			RangerPolicy policy = svcStore.getPolicy(id);
+
+			ensureAdminAccess(policy.getService(), policy.getResources());
+
 			svcStore.deletePolicy(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("deletePolicy(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -801,12 +1157,26 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.getPolicy(" + id + ")");
 		}
 
-		RangerPolicy ret = null;
+		RangerPolicy     ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getPolicy(policyId=" + id + ")");
+			}
 			ret = svcStore.getPolicy(id);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+
+			if(ret != null) {
+				ensureAdminAccess(ret.getService(), ret.getResources());
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getPolicy(" + id + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(ret == null) {
@@ -823,23 +1193,90 @@ public class ServiceREST {
 	@GET
 	@Path("/policies")
 	@Produces({ "application/json", "application/xml" })
-	public List<RangerPolicy> getPolicies(@Context HttpServletRequest request) {
-		if(LOG.isDebugEnabled()) {
+	public RangerPolicyList getPolicies(@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getPolicies()");
 		}
 
-		List<RangerPolicy> ret = null;
+		RangerPolicyList ret  = new RangerPolicyList();
+		RangerPerfTracer perf = null;
 
-		SearchFilter filter = getSearchFilter(request);
+		SearchFilter filter = searchUtil.getSearchFilter(request, policyService.sortFields);
 
 		try {
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getPolicies()");
+			}
+
+			if(isAdminUserWithNoFilterParams(filter)) {
+				PList<RangerPolicy> policies = svcStore.getPaginatedPolicies(filter);
+
+				ret = toRangerPolicyList(policies);
+			} else {
+				// get all policies from the store; pick the page to return after applying filter
+				int savedStartIndex = filter == null ? 0 : filter.getStartIndex();
+				int savedMaxRows    = filter == null ? Integer.MAX_VALUE : filter.getMaxRows();
+
+				if(filter != null) {
+					filter.setStartIndex(0);
+					filter.setMaxRows(Integer.MAX_VALUE);
+				}
+
+				List<RangerPolicy> policies = svcStore.getPolicies(filter);
+
+				if(filter != null) {
+					filter.setStartIndex(savedStartIndex);
+					filter.setMaxRows(savedMaxRows);
+				}
+
+				policies = applyAdminAccessFilter(policies);
+
+				ret = toRangerPolicyList(policies, filter);
+			}
+
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch (Throwable excp) {
+			LOG.error("getPolicies() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
+		}
+
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getPolicies(): count=" + (ret == null ? 0 : ret.getListSize()));
+		}
+		return ret;
+	}
+
+	public List<RangerPolicy> getPolicies(SearchFilter filter) {
+		if(LOG.isDebugEnabled()) {
+			LOG.debug("==> ServiceREST.getPolicies(filter)");
+		}
+
+		List<RangerPolicy> ret  = null;
+		RangerPerfTracer   perf = null;
+
+		try {
+			if (RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getPolicies()");
+			}
 			ret = svcStore.getPolicies(filter);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+
+			ret = applyAdminAccessFilter(ret);
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getPolicies() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.getPolicies(): count=" + (ret == null ? 0 : ret.size()));
+			LOG.debug("<== ServiceREST.getPolicies(filter): count=" + (ret == null ? 0 : ret.size()));
 		}
 
 		return ret;
@@ -853,14 +1290,26 @@ public class ServiceREST {
 			LOG.debug("==> ServiceREST.countPolicies():");
 		}
 
-		Long ret = null;
+		Long             ret  = null;
+		RangerPerfTracer perf = null;
 
 		try {
-			List<RangerPolicy> services = getPolicies(request);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.countPolicies()");
+			}
+			List<RangerPolicy> policies = getPolicies(request).getPolicies();
+
+			policies = applyAdminAccessFilter(policies);
 			
-			ret = new Long(services == null ? 0 : services.size());
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			ret = Long.valueOf(policies == null ? 0 : policies.size());
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("countPolicies() failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
 		if(LOG.isDebugEnabled()) {
@@ -873,65 +1322,130 @@ public class ServiceREST {
 	@GET
 	@Path("/policies/service/{id}")
 	@Produces({ "application/json", "application/xml" })
-	public List<RangerPolicy> getServicePolicies(@PathParam("id") Long serviceId, @Context HttpServletRequest request) {
-		if(LOG.isDebugEnabled()) {
+	public RangerPolicyList getServicePolicies(@PathParam("id") Long serviceId,
+			@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServicePolicies(" + serviceId + ")");
 		}
 
-		List<RangerPolicy> ret = null;
+		RangerPolicyList ret  = new RangerPolicyList();
+		RangerPerfTracer perf = null;
 
-		SearchFilter filter = getSearchFilter(request);
+		SearchFilter filter = searchUtil.getSearchFilter(request, policyService.sortFields);
 
 		try {
-			ret = svcStore.getServicePolicies(serviceId, filter);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServicePolicies(serviceId=" + serviceId + ")");
+			}
+
+			if(isAdminUserWithNoFilterParams(filter)) {
+				PList<RangerPolicy> policies = svcStore.getPaginatedServicePolicies(serviceId, filter);
+
+				ret = toRangerPolicyList(policies);
+			} else {
+				// get all policies from the store; pick the page to return after applying filter
+				int savedStartIndex = filter == null ? 0 : filter.getStartIndex();
+				int savedMaxRows    = filter == null ? Integer.MAX_VALUE : filter.getMaxRows();
+
+				if(filter != null) {
+					filter.setStartIndex(0);
+					filter.setMaxRows(Integer.MAX_VALUE);
+				}
+
+				List<RangerPolicy> servicePolicies = svcStore.getServicePolicies(serviceId, filter);
+
+				if(filter != null) {
+					filter.setStartIndex(savedStartIndex);
+					filter.setMaxRows(savedMaxRows);
+				}
+
+				servicePolicies = applyAdminAccessFilter(servicePolicies);
+
+				ret = toRangerPolicyList(servicePolicies, filter);
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch (Throwable excp) {
+			LOG.error("getServicePolicies(" + serviceId + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
-		if(ret == null) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_NOT_FOUND, "Not found", true);
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getServicePolicies(" + serviceId + "): count="
+					+ (ret == null ? 0 : ret.getListSize()));
 		}
-
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.getServicePolicies(" + serviceId + "): count=" + (ret == null ? 0 : ret.size()));
-		}
-
 		return ret;
 	}
 
 	@GET
 	@Path("/policies/service/name/{name}")
 	@Produces({ "application/json", "application/xml" })
-	public List<RangerPolicy> getServicePolicies(@PathParam("name") String serviceName, @Context HttpServletRequest request) {
-		if(LOG.isDebugEnabled()) {
+	public RangerPolicyList getServicePoliciesByName(@PathParam("name") String serviceName,
+			@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServicePolicies(" + serviceName + ")");
 		}
 
-		List<RangerPolicy> ret = null;
+		RangerPolicyList ret  = new RangerPolicyList();
+		RangerPerfTracer perf = null;
 
-		SearchFilter filter = getSearchFilter(request);
+		SearchFilter filter = searchUtil.getSearchFilter(request, policyService.sortFields);
 
 		try {
-			ret = svcStore.getServicePolicies(serviceName, filter);
-		} catch(Exception excp) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_BAD_REQUEST, excp.getMessage(), true);
+			if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+				perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServicePolicies(serviceName=" + serviceName + ")");
+			}
+
+			if(isAdminUserWithNoFilterParams(filter)) {
+				PList<RangerPolicy> policies = svcStore.getPaginatedServicePolicies(serviceName, filter);
+
+				ret = toRangerPolicyList(policies);
+			} else {
+				// get all policies from the store; pick the page to return after applying filter
+				int savedStartIndex = filter == null ? 0 : filter.getStartIndex();
+				int savedMaxRows    = filter == null ? Integer.MAX_VALUE : filter.getMaxRows();
+
+				if(filter != null) {
+					filter.setStartIndex(0);
+					filter.setMaxRows(Integer.MAX_VALUE);
+				}
+
+				List<RangerPolicy> servicePolicies = svcStore.getServicePolicies(serviceName, filter);
+
+				if(filter != null) {
+					filter.setStartIndex(savedStartIndex);
+					filter.setMaxRows(savedMaxRows);
+				}
+
+				servicePolicies = applyAdminAccessFilter(servicePolicies);
+
+				ret = toRangerPolicyList(servicePolicies, filter);
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch (Throwable excp) {
+			LOG.error("getServicePolicies(" + serviceName + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		} finally {
+			RangerPerfTracer.log(perf);
 		}
 
-		if(ret == null) {
-			throw restErrorUtil.createRESTException(HttpServletResponse.SC_NOT_FOUND, "Not found", true);
-		}
-
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.getServicePolicies(" + serviceName + "): count=" + (ret == null ? 0 : ret.size()));
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getServicePolicies(" + serviceName + "): count="
+					+ (ret == null ? 0 : ret.getListSize()));
 		}
 
 		return ret;
 	}
 
 	@GET
-	@Path("/policies/download/{serviceName}/{lastKnownVersion}")
+	@Path("/policies/download/{serviceName}")
 	@Produces({ "application/json", "application/xml" })
-	public ServicePolicies getServicePoliciesIfUpdated(@PathParam("serviceName") String serviceName, @PathParam("lastKnownVersion") Long lastKnownVersion, @Context HttpServletRequest request) throws Exception {
+	public ServicePolicies getServicePoliciesIfUpdated(@PathParam("serviceName") String serviceName, @QueryParam("lastKnownVersion") Long lastKnownVersion, @QueryParam("pluginId") String pluginId, @Context HttpServletRequest request) throws Exception {
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("==> ServiceREST.getServicePoliciesIfUpdated(" + serviceName + ", " + lastKnownVersion + ")");
 		}
@@ -939,72 +1453,53 @@ public class ServiceREST {
 		ServicePolicies ret      = null;
 		int             httpCode = HttpServletResponse.SC_OK;
 		String          logMsg   = null;
+		RangerPerfTracer perf    = null;
 
-		try {
-			ret = svcStore.getServicePoliciesIfUpdated(serviceName, lastKnownVersion);
-
-			if(ret == null) {
-				httpCode = HttpServletResponse.SC_NOT_MODIFIED;
-				logMsg   = "No change since last update";
-			} else {
-				httpCode = HttpServletResponse.SC_OK;
-				logMsg   = "Returning " + (ret.getPolicies() != null ? ret.getPolicies().size() : 0) + " policies. Policy version=" + ret.getPolicyVersion();
+		if (serviceUtil.isValidateHttpsAuthentication(serviceName, request)) {
+			if(lastKnownVersion == null) {
+				lastKnownVersion = Long.valueOf(-1);
 			}
-		} catch(Exception excp) {
-			httpCode = HttpServletResponse.SC_BAD_REQUEST;
-			logMsg   = excp.getMessage();
-		} finally {
-			createPolicyDownloadAudit(serviceName, lastKnownVersion, ret, httpCode, request);
-		}
+			
+			try {
+				if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+					perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.getServicePoliciesIfUpdated(serviceName=" + serviceName + ",lastKnownVersion=" + lastKnownVersion + ")");
+				}
+				ret = svcStore.getServicePoliciesIfUpdated(serviceName, lastKnownVersion);
+	
+				if(ret == null) {
+					httpCode = HttpServletResponse.SC_NOT_MODIFIED;
+					logMsg   = "No change since last update";
+				} else {
+					httpCode = HttpServletResponse.SC_OK;
+					logMsg   = "Returning " + (ret.getPolicies() != null ? ret.getPolicies().size() : 0) + " policies. Policy version=" + ret.getPolicyVersion();
+				}
+			} catch(Throwable excp) {
+				LOG.error("getServicePoliciesIfUpdated(" + serviceName + ", " + lastKnownVersion + ") failed", excp);
+	
+				httpCode = HttpServletResponse.SC_BAD_REQUEST;
+				logMsg   = excp.getMessage();
+			} finally {
+				createPolicyDownloadAudit(serviceName, lastKnownVersion, pluginId, ret, httpCode, request);
 
-		if(httpCode != HttpServletResponse.SC_OK) {
-			boolean logError = httpCode != HttpServletResponse.SC_NOT_MODIFIED;
-			throw restErrorUtil.createRESTException(httpCode, logMsg, logError);
-		}
-
+				RangerPerfTracer.log(perf);
+			}
+	
+			if(httpCode != HttpServletResponse.SC_OK) {
+				boolean logError = httpCode != HttpServletResponse.SC_NOT_MODIFIED;
+				throw restErrorUtil.createRESTException(httpCode, logMsg, logError);
+			}
+		 }
+ 
 		if(LOG.isDebugEnabled()) {
 			LOG.debug("<== ServiceREST.getServicePoliciesIfUpdated(" + serviceName + ", " + lastKnownVersion + "): count=" + ((ret == null || ret.getPolicies() == null) ? 0 : ret.getPolicies().size()));
 		}
-
+   
 		return ret;
 	}
 
-
-	private SearchFilter getSearchFilter(HttpServletRequest request) {
-		if(request == null || MapUtils.isEmpty(request.getParameterMap())) {
-			return null;
-		}
-
-		SearchFilter ret = new SearchFilter();
-
-		ret.setParam(SearchFilter.LOGIN_USER, request.getParameter(SearchFilter.LOGIN_USER));
-		ret.setParam(SearchFilter.SERVICE_TYPE, request.getParameter(SearchFilter.SERVICE_TYPE));
-		ret.setParam(SearchFilter.SERVICE_TYPE_ID, request.getParameter(SearchFilter.SERVICE_TYPE_ID));
-		ret.setParam(SearchFilter.SERVICE_NAME, request.getParameter(SearchFilter.SERVICE_NAME));
-		ret.setParam(SearchFilter.SERVICE_ID, request.getParameter(SearchFilter.SERVICE_ID));
-		ret.setParam(SearchFilter.POLICY_NAME, request.getParameter(SearchFilter.POLICY_NAME));
-		ret.setParam(SearchFilter.POLICY_ID, request.getParameter(SearchFilter.POLICY_ID));
-		ret.setParam(SearchFilter.STATUS, request.getParameter(SearchFilter.STATUS));
-		ret.setParam(SearchFilter.USER, request.getParameter(SearchFilter.USER));
-		ret.setParam(SearchFilter.GROUP, request.getParameter(SearchFilter.GROUP));
-		ret.setParam(SearchFilter.SORT_BY, request.getParameter(SearchFilter.SORT_BY));
-		
-		for(Map.Entry<String, String[]> e : request.getParameterMap().entrySet()) {
-			String   name   = e.getKey();
-			String[] values = e.getValue();
-			
-			if(!StringUtils.isEmpty(name) && !ArrayUtils.isEmpty(values) && name.startsWith(SearchFilter.RESOURCE_PREFIX)) {
-				ret.setParam(name, values[0]);
-			}
-		}
-
-		return ret;
-	}
-
-	private void createPolicyDownloadAudit(String serviceName, Long lastKnownVersion, ServicePolicies policies, int httpRespCode, HttpServletRequest request) {
+	private void createPolicyDownloadAudit(String serviceName, Long lastKnownVersion, String pluginId, ServicePolicies policies, int httpRespCode, HttpServletRequest request) {
 		try {
-			String  agentId   = request.getParameter("agentId");
-			String  ipAddress = request.getHeader("X-FORWARDED-FOR");  
+			String ipAddress = request.getHeader("X-FORWARDED-FOR");
 
 			if (ipAddress == null) {  
 				ipAddress = request.getRemoteAddr();
@@ -1013,7 +1508,7 @@ public class ServiceREST {
 			XXPolicyExportAudit policyExportAudit = new XXPolicyExportAudit();
 
 			policyExportAudit.setRepositoryName(serviceName);
-			policyExportAudit.setAgentId(agentId);
+			policyExportAudit.setAgentId(pluginId);
 			policyExportAudit.setClientIP(ipAddress);
 			policyExportAudit.setRequestedEpoch(lastKnownVersion);
 			policyExportAudit.setHttpRetCode(httpRespCode);
@@ -1024,231 +1519,348 @@ public class ServiceREST {
 		}
 	}
 
-	private boolean isAdminForResource(String userName, Set<String> userGroups, String serviceName, RangerResource resource) throws Exception {
+	private RangerPolicy getExactMatchPolicyForResource(String serviceName, RangerAccessResource resource) throws Exception {
 		if(LOG.isDebugEnabled()) {
-			LOG.debug("==> ServiceREST.isAdminForResource(" + userName + ", " + serviceName + ", " + resource + ")");
+			LOG.debug("==> ServiceREST.getExactMatchPolicyForResource(" + resource + ")");
 		}
 
-		boolean ret = false;
-		
-		List<RangerPolicy> policies = getServicePolicies(serviceName, null);
+		RangerPolicy       ret          = null;
+		RangerPolicyEngine policyEngine = getPolicyEngine(serviceName);
+		List<RangerPolicy> policies     = policyEngine != null ? policyEngine.getExactMatchPolicies(resource) : null;
 
-		if(!CollectionUtils.isEmpty(policies)) {
-			for(RangerPolicy policy : policies) {
-				if(!isMatch(policy, resource)) {
-					continue;
+		if(CollectionUtils.isNotEmpty(policies)) {
+			// at this point, ret is a policy in policy-engine; the caller might update the policy (for grant/revoke); so get a copy from the store
+			ret = svcStore.getPolicy(policies.get(0).getId());
+		}
+
+		if(LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getExactMatchPolicyForResource(" + resource + "): " + ret);
+		}
+
+		return ret;
+	}
+
+	private RangerPolicy getExactMatchPolicyForResource(String serviceName, Map<String, RangerPolicyResource> resources) throws Exception {
+		if(LOG.isDebugEnabled()) {
+			LOG.debug("==> ServiceREST.getExactMatchPolicyForResource(" + resources + ")");
+		}
+
+		RangerPolicy       ret          = null;
+		RangerPolicyEngine policyEngine = getPolicyEngine(serviceName);
+		List<RangerPolicy> policies     = policyEngine != null ? policyEngine.getExactMatchPolicies(resources) : null;
+
+		if(CollectionUtils.isNotEmpty(policies)) {
+			// at this point, ret is a policy in policy-engine; the caller might update the policy (for grant/revoke); so get a copy from the store
+			ret = svcStore.getPolicy(policies.get(0).getId());
+		}
+
+		if(LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getExactMatchPolicyForResource(" + resources + "): " + ret);
+		}
+
+		return ret;
+	}
+
+	@GET
+	@Path("/policies/eventTime")
+	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_POLICY_FROM_EVENT_TIME + "\")")
+	public RangerPolicy getPolicyFromEventTime(@Context HttpServletRequest request) {
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("==> ServiceREST.getPolicyFromEventTime()");
+		}
+
+		String eventTimeStr = request.getParameter("eventTime");
+		String policyIdStr = request.getParameter("policyId");
+
+		if (StringUtils.isEmpty(eventTimeStr) || StringUtils.isEmpty(policyIdStr)) {
+			throw restErrorUtil.createRESTException("EventTime or policyId cannot be null or empty string.",
+					MessageEnums.INVALID_INPUT_DATA);
+		}
+
+		Long policyId = Long.parseLong(policyIdStr);
+
+		RangerPolicy policy=null;
+		try {
+			policy = svcStore.getPolicyFromEventTime(eventTimeStr, policyId);
+			if(policy != null) {
+				ensureAdminAccess(policy.getService(), policy.getResources());
+			}
+		} catch(WebApplicationException excp) {
+			throw excp;
+		} catch(Throwable excp) {
+			LOG.error("getPolicy(" + policyId + ") failed", excp);
+
+			throw restErrorUtil.createRESTException(excp.getMessage());
+		}
+
+		if(policy == null) {
+			throw restErrorUtil.createRESTException(HttpServletResponse.SC_NOT_FOUND, "Not found", true);
+		}
+
+		if(LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getPolicy(" + policyId + "): " + policy);
+		}
+
+		if (LOG.isDebugEnabled()) {
+			LOG.debug("<== ServiceREST.getPolicyFromEventTime()");
+		}
+
+		return policy;
+	}
+
+	@GET
+	@Path("/policy/{policyId}/versionList")
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_POLICY_VERSION_LIST + "\")")
+	public VXString getPolicyVersionList(@PathParam("policyId") Long policyId) {
+
+		VXString policyVersionListStr = svcStore.getPolicyVersionList(policyId);
+
+		return policyVersionListStr;
+	}
+
+	@GET
+	@Path("/policy/{policyId}/version/{versionNo}")
+	@Produces({ "application/json", "application/xml" })
+	@PreAuthorize("@rangerPreAuthSecurityHandler.isAPIAccessible(\"" + RangerAPIList.GET_POLICY_FOR_VERSION_NO + "\")")
+	public RangerPolicy getPolicyForVersionNumber(@PathParam("policyId") Long policyId,
+			@PathParam("versionNo") int versionNo) {
+		return svcStore.getPolicyForVersionNumber(policyId, versionNo);
+	}
+
+	private List<RangerPolicy> applyAdminAccessFilter(List<RangerPolicy> policies) {
+		List<RangerPolicy> ret = new ArrayList<RangerPolicy>();
+		RangerPerfTracer  perf = null;
+
+		if(RangerPerfTracer.isPerfTraceEnabled(PERF_LOG)) {
+			perf = RangerPerfTracer.getPerfTracer(PERF_LOG, "ServiceREST.applyAdminAccessFilter(policyCount=" + (policies == null ? 0 : policies.size()) + ")");
+		}
+
+		if (CollectionUtils.isNotEmpty(policies)) {
+			boolean     isAdmin    = bizUtil.isAdmin();
+			boolean     isKeyAdmin = bizUtil.isKeyAdmin();
+			String      userName   = bizUtil.getCurrentUserLoginId();
+			Set<String> userGroups = null;
+
+			Map<String, List<RangerPolicy>> servicePoliciesMap = new HashMap<String, List<RangerPolicy>>();
+
+			for (int i = 0; i < policies.size(); i++) {
+				RangerPolicy       policy      = policies.get(i);
+				String             serviceName = policy.getService();
+				List<RangerPolicy> policyList  = servicePoliciesMap.get(serviceName);
+
+				if (policyList == null) {
+					policyList = new ArrayList<RangerPolicy>();
+
+					servicePoliciesMap.put(serviceName, policyList);
 				}
 
-				if(CollectionUtils.isEmpty(policy.getPolicyItems())) {
-					continue;
-				}
+				policyList.add(policy);
+			}
 
-				for(RangerPolicyItem policyItem : policy.getPolicyItems()) {
-					if(! policyItem.getDelegateAdmin()) {
+			for (Map.Entry<String, List<RangerPolicy>> entry : servicePoliciesMap.entrySet()) {
+				String             serviceName  = entry.getKey();
+				List<RangerPolicy> listToFilter = entry.getValue();
+
+				if (CollectionUtils.isNotEmpty(listToFilter)) {
+					if (isAdmin || isKeyAdmin) {
+						XXService xService     = daoManager.getXXService().findByName(serviceName);
+						Long      serviceDefId = xService.getType();
+						boolean   isKmsService = serviceDefId.equals(EmbeddedServiceDefsUtil.instance().getKmsServiceDefId());
+
+						if (isAdmin) {
+							if (!isKmsService) {
+								ret.addAll(listToFilter);
+							}
+						} else { // isKeyAdmin
+							if (isKmsService) {
+								ret.addAll(listToFilter);
+							}
+						}
+
 						continue;
 					}
 
-					if(policyItem.getUsers().contains(userName) ||
-					   policyItem.getGroups().contains(RangerPolicyEngine.GROUP_PUBLIC) ||
-					   CollectionUtils.containsAny(policyItem.getGroups(), userGroups)) {
-						ret = true;
-						break;
+					RangerPolicyEngine policyEngine = getDelegatedAdminPolicyEngine(serviceName);
+
+					if (policyEngine != null) {
+						if(userGroups == null) {
+							userGroups = daoManager.getXXGroupUser().findGroupNamesByUserName(userName);
+						}
+
+						for (RangerPolicy policy : listToFilter) {
+							if (policyEngine.isAccessAllowed(policy.getResources(), userName, userGroups, RangerPolicyEngine.ADMIN_ACCESS)) {
+								ret.add(policy);
+							}
+						}
 					}
-				}
 
-				if(ret) {
-					break;
 				}
 			}
 		}
 
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.isAdminForResource(" + userName + ", " + serviceName + ", " + resource + "): " + ret);
-		}
+		RangerPerfTracer.log(perf);
 
 		return ret;
 	}
 
-	private RangerPolicy getExactMatchPolicyForResource(String serviceName, RangerResource resource) throws Exception {
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("==> ServiceREST.getExactMatchPolicyForResource(" + serviceName + ", " + resource + ")");
-		}
+	void ensureAdminAccess(String serviceName, Map<String, RangerPolicyResource> resources) {
+		boolean isAdmin = bizUtil.isAdmin();
+		boolean isKeyAdmin = bizUtil.isKeyAdmin();
+		String userName = bizUtil.getCurrentUserLoginId();
 
-		RangerPolicy ret = null;
+		if(!isAdmin && !isKeyAdmin) {
+			boolean isAllowed = false;
 
-		List<RangerPolicy> policies = getServicePolicies(serviceName, null);
+			RangerPolicyEngine policyEngine = getDelegatedAdminPolicyEngine(serviceName);
 
-		if(!CollectionUtils.isEmpty(policies)) {
-			for(RangerPolicy policy : policies) {
-				if(isSingleAndExactMatch(policy, resource)) {
-					ret = policy;
+			if (policyEngine != null) {
+				Set<String> userGroups = userMgr.getGroupsForUser(userName);
 
-					break;
+				isAllowed = hasAdminAccess(serviceName, userName, userGroups, resources);
+			}
+
+			if (!isAllowed) {
+				throw restErrorUtil.createRESTException(HttpServletResponse.SC_UNAUTHORIZED,
+						"User '" + userName + "' does not have delegated-admin privilege on given resources", true);
+			}
+		} else {
+
+			XXService xService = daoManager.getXXService().findByName(serviceName);
+			XXServiceDef xServiceDef = daoManager.getXXServiceDef().getById(xService.getType());
+
+			if (isAdmin) {
+				if (xServiceDef.getImplclassname().equals(EmbeddedServiceDefsUtil.KMS_IMPL_CLASS_NAME)) {
+					throw restErrorUtil.createRESTException(
+							"KMS Policies/Services/Service-Defs are not accessible for user '" + userName + "'.",
+							MessageEnums.OPER_NO_PERMISSION);
+				}
+			} else if (isKeyAdmin) {
+				if (!xServiceDef.getImplclassname().equals(EmbeddedServiceDefsUtil.KMS_IMPL_CLASS_NAME)) {
+					throw restErrorUtil.createRESTException(
+							"Only KMS Policies/Services/Service-Defs are accessible for user '" + userName + "'.",
+							MessageEnums.OPER_NO_PERMISSION);
 				}
 			}
 		}
+	}
 
-		if(LOG.isDebugEnabled()) {
-			LOG.debug("<== ServiceREST.getExactMatchPolicyForResource(" + serviceName + ", " + resource + "): " + ret);
+	private boolean hasAdminAccess(String serviceName, String userName, Set<String> userGroups, Map<String, RangerPolicyResource> resources) {
+		boolean isAllowed = false;
+
+		RangerPolicyEngine policyEngine = getDelegatedAdminPolicyEngine(serviceName);
+
+		if(policyEngine != null) {
+			isAllowed = policyEngine.isAccessAllowed(resources, userName, userGroups, RangerPolicyEngine.ADMIN_ACCESS);
+		}
+
+		return isAllowed;
+	}
+
+	private boolean hasAdminAccess(String serviceName, String userName, Set<String> userGroups, RangerAccessResource resource) {
+		boolean isAllowed = false;
+
+		RangerPolicyEngine policyEngine = getDelegatedAdminPolicyEngine(serviceName);
+
+		if(policyEngine != null) {
+			isAllowed = policyEngine.isAccessAllowed(resource, userName, userGroups, RangerPolicyEngine.ADMIN_ACCESS);
+		}
+
+		return isAllowed;
+	}
+
+	private RangerPolicyEngine getDelegatedAdminPolicyEngine(String serviceName) {
+		if(RangerPolicyEngineCache.getInstance().getPolicyEngineOptions() == null) {
+			RangerPolicyEngineOptions options = new RangerPolicyEngineOptions();
+
+			String propertyPrefix = "ranger.admin";
+
+			options.evaluatorType           = RangerPolicyEvaluator.EVALUATOR_TYPE_OPTIMIZED;
+			options.cacheAuditResults       = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.cache.audit.results", false);
+			options.disableContextEnrichers = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.disable.context.enrichers", true);
+			options.disableCustomConditions = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.disable.custom.conditions", true);
+			options.evaluateDelegateAdminOnly = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.evaluate.delegateadmin.only", true);
+
+			RangerPolicyEngineCache.getInstance().setPolicyEngineOptions(options);
+		}
+
+		RangerPolicyEngine ret = RangerPolicyEngineCache.getInstance().getPolicyEngine(serviceName, svcStore);
+
+		return ret;
+	}
+
+	private RangerPolicyEngine getPolicyEngine(String serviceName) throws Exception {
+		RangerPolicyEngineOptions options = new RangerPolicyEngineOptions();
+
+		String propertyPrefix = "ranger.admin";
+
+		options.evaluatorType             = RangerPolicyEvaluator.EVALUATOR_TYPE_OPTIMIZED;
+		options.cacheAuditResults         = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.cache.audit.results", false);
+		options.disableContextEnrichers   = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.disable.context.enrichers", true);
+		options.disableCustomConditions   = RangerConfiguration.getInstance().getBoolean(propertyPrefix + ".policyengine.option.disable.custom.conditions", true);
+		options.evaluateDelegateAdminOnly = false;
+
+		ServicePolicies policies = svcStore.getServicePoliciesIfUpdated(serviceName, -1L);
+
+		RangerPolicyEngine ret = new RangerPolicyEngineImpl("ranger-admin", policies, options);
+
+		return ret;
+	}
+
+	@GET
+	@Path("/checksso")
+	@Produces(MediaType.TEXT_PLAIN)
+	public String checkSSO() {
+		return String.valueOf(bizUtil.isSSOEnabled());
+	}
+
+	boolean isAdminUserWithNoFilterParams(SearchFilter filter) {
+		return (filter == null || MapUtils.isEmpty(filter.getParams())) &&
+			   (bizUtil.isAdmin() || bizUtil.isKeyAdmin());
+	}
+
+	private RangerPolicyList toRangerPolicyList(PList<RangerPolicy> policyList) {
+		RangerPolicyList ret = new RangerPolicyList();
+
+		if(policyList != null) {
+			ret.setPolicies(policyList.getList());
+			ret.setPageSize(policyList.getPageSize());
+			ret.setResultSize(policyList.getResultSize());
+			ret.setStartIndex(policyList.getStartIndex());
+			ret.setTotalCount(policyList.getTotalCount());
+			ret.setSortBy(policyList.getSortBy());
+			ret.setSortType(policyList.getSortType());
 		}
 
 		return ret;
 	}
 
-	private boolean isMatch(RangerPolicy policy, RangerResource resource) throws Exception {
-		boolean ret = false;
+	private RangerPolicyList toRangerPolicyList(List<RangerPolicy> policyList, SearchFilter filter) {
+		RangerPolicyList ret = new RangerPolicyList();
 
-		String        serviceName = policy.getService();
-		RangerService service     = getServiceByName(serviceName);
+		if(CollectionUtils.isNotEmpty(policyList)) {
+			int    totalCount = policyList.size();
+			int    startIndex = filter == null ? 0 : filter.getStartIndex();
+			int    pageSize   = filter == null ? totalCount : filter.getMaxRows();
+			int    toIndex    = Math.min(startIndex + pageSize, totalCount);
+			String sortType   = filter == null ? null : filter.getSortType();
+			String sortBy     = filter == null ? null : filter.getSortBy();
 
-		if(service == null) {
-			throw new Exception(serviceName + ": service does not exist");
-		}
-
-		RangerServiceDef serviceDef = getServiceDefByName(service.getType());
-
-		if(serviceDef == null) {
-			throw new Exception(serviceName + ": unknown service-type");
-		}
-
-		RangerPolicyEvaluator policyEvaluator = new RangerDefaultPolicyEvaluator();
-
-		policyEvaluator.init(policy, serviceDef);
-
-		ret = policyEvaluator.isMatch(resource);
-
-		return ret;
-	}
-
-	private boolean isSingleAndExactMatch(RangerPolicy policy, RangerResource resource) throws Exception {
-		boolean ret = false;
-
-		String        serviceName = policy.getService();
-		RangerService service     = getServiceByName(serviceName);
-
-		if(service == null) {
-			throw new Exception(serviceName + ": service does not exist");
-		}
-
-		RangerServiceDef serviceDef = getServiceDefByName(service.getType());
-
-		if(serviceDef == null) {
-			throw new Exception(serviceName + ": unknown service-type");
-		}
-
-		RangerPolicyEvaluator policyEvaluator = new RangerDefaultPolicyEvaluator();
-
-		policyEvaluator.init(policy, serviceDef);
-
-		ret = policyEvaluator.isSingleAndExactMatch(resource);
-
-		return ret;
-	}
-
-	private boolean compactPolicy(RangerPolicy policy) {
-		boolean ret = false;
-
-		List<RangerPolicyItem> policyItems = policy.getPolicyItems();
-
-		int numOfItems = policyItems.size();
-		
-		for(int i = 0; i < numOfItems; i++) {
-			RangerPolicyItem policyItem = policyItems.get(i);
-			
-			// remove the policy item if 1) there are no users and groups OR 2) if there are no accessTypes and not a delegate-admin
-			if((CollectionUtils.isEmpty(policyItem.getUsers()) && CollectionUtils.isEmpty(policyItem.getGroups())) ||
-			   (CollectionUtils.isEmpty(policyItem.getAccesses()) && !policyItem.getDelegateAdmin())) {
-				policyItems.remove(i);
-				numOfItems--;
-				i--;
-
-				ret = true;
+			List<RangerPolicy> retList = new ArrayList<RangerPolicy>();
+			for(int i = startIndex; i < toIndex; i++) {
+				retList.add(policyList.get(i));
 			}
+
+			ret.setPolicies(retList);
+			ret.setPageSize(pageSize);
+			ret.setResultSize(retList.size());
+			ret.setStartIndex(startIndex);
+			ret.setTotalCount(totalCount);
+			ret.setSortBy(sortBy);
+			ret.setSortType(sortType);
 		}
 
 		return ret;
 	}
 
-	private RangerPolicyItem getPolicyItemForUser(RangerPolicy policy, String userName) {
-		RangerPolicyItem ret = null;
-
-		for(RangerPolicyItem policyItem : policy.getPolicyItems()) {
-			if(policyItem.getUsers().size() != 1) {
-				continue;
-			}
-
-			if(policyItem.getUsers().contains(userName)) {
-				ret = policyItem;
-				break;
-			}
-		}
-
-		return ret;
-	}
-
-	private RangerPolicyItem getPolicyItemForGroup(RangerPolicy policy, String groupName) {
-		RangerPolicyItem ret = null;
-
-		for(RangerPolicyItem policyItem : policy.getPolicyItems()) {
-			if(policyItem.getGroups().size() != 1) {
-				continue;
-			}
-
-			if(policyItem.getGroups().contains(groupName)) {
-				ret = policyItem;
-				break;
-			}
-		}
-
-		return ret;
-	}
-
-	private boolean addAccesses(RangerPolicyItem policyItem, Set<String> accessTypes) {
-		boolean ret = false;
-
-		for(String accessType : accessTypes) {
-			RangerPolicyItemAccess policyItemAccess = null;
-
-			for(RangerPolicyItemAccess itemAccess : policyItem.getAccesses()) {
-				if(StringUtils.equals(itemAccess.getType(), accessType)) {
-					policyItemAccess = itemAccess;
-					break;
-				}
-			}
-
-			if(policyItemAccess != null) {
-				if(!policyItemAccess.getIsAllowed()) {
-					policyItemAccess.setIsAllowed(Boolean.TRUE);
-					ret = true;
-				}
-			} else {
-				policyItem.getAccesses().add(new RangerPolicyItemAccess(accessType, Boolean.TRUE));
-				ret = true;
-			}
-		}
-
-		return ret;
-	}
-
-	private boolean removeAccesses(RangerPolicyItem policyItem, Set<String> accessTypes) {
-		boolean ret = false;
-
-		for(String accessType : accessTypes) {
-			int numOfItems = policyItem.getAccesses().size();
-
-			for(int i = 0; i < numOfItems; i++) {
-				RangerPolicyItemAccess itemAccess = policyItem.getAccesses().get(i);
-				
-				if(StringUtils.equals(itemAccess.getType(), accessType)) {
-					policyItem.getAccesses().remove(i);
-					numOfItems--;
-					i--;
-
-					ret = true;
-				}
-			}
-		}
-
-		return ret;
-	}
 }
